Overlapping correction Dashboard

--- a/src/styles/pages/Dashboard.scss
+++ b/src/styles/pages/Dashboard.scss
@@ -1,9 +1,24 @@
+
 .dashboard{
-  //height: calc(100vh - 12rem);
-  width: 100vw;
   display: grid;
-  grid-gap: 1rem;
-  /* grid-template-rows: repeat(2, minmax(25rem, 1fr)); */
-  padding: 0;
-  margin: 0;
+  grid-template-columns: 115px 1000px auto;
+  grid-template-rows: 100vh ;
+  grid-template-areas:
+  "LateralMenu MainProfile DashboardTwitter"
 }
+
+
+.MainProfile{
+  padding-left: 3rem;
+  grid-area:MainProfile;
+}
+
+.LateralMenu{
+ grid-area:LateralMenu;
+}
+
+.DashboardTwitter{
+  grid-area:DashboardTwitter;
+  height: 100vh;
+}
+
